@@ -1,5 +1,5 @@
 // -*- coding: utf-8 -*-
-// Copyright (C) 2015, 2016 Laboratoire de Recherche et Développement de
+// Copyright (C) 2015, 2016, 2022 Laboratoire de Recherche et Développement de
 // l'Epita (LRDE).
 //
 // This file is part of Spot, a model checking library.
@@ -33,7 +33,7 @@ public:
   // Open a file for output.  "-" is interpreted as stdout.
   // Names that start with ">>" are opened for append.
   // The function calls error() on... error.
-  output_file(const char* name);
+  output_file(const char* name, bool force_append = false);
 
   void close(const std::string& name);
 
