@@ -29,9 +29,12 @@ New in spot 2.10.6.dev  (not yet released)
   - autcross learned a --language-complemented option to assist in the
     case one is testing tools that complement automata.  (issue #504).
 
-  - ltlsynt as a new option --tlsf that takes the filename of a TLSF
+  - ltlsynt has a new option --tlsf that takes the filename of a TLSF
     specification and calls syfco (which must be installed) to convert
     it into an LTL formula.
+
+  - ltlsynt has a new option --from-pgame that takes a parity game in
+    extended HOA format, as used in the Synthesis Competition.
 
   Library:
 
